# kiku-dist

./: .gitignore  .release-it.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  pyproject.toml
ci_templates/: .drone.yml  Jenkinsfile  gitlab-ci.yml
ci_templates/gha/: docker.yml  docs.yml  pr-dirs.yml  release.yml
docs/: AGENT_PROMPT.md  EXPANDED_TARGETS.md
examples/: kiku-dist.toml.example
kiku_dist/: __init__.py  ci_runner.py  cli.py  config.py  doctor.py  openapi.py  prepare_listing.py
kiku_dist/targets/: __init__.py  base.py  container.py  docs.py  gh_release.py  pr_dirs.py  rapidapi.py  registry.py
tests/: __init__.py  test_cli.py  test_config.py  test_doctor.py  test_openapi.py  test_targets.py
